syntax = "proto3";
package stbp.v1.commands;

import "configuration.proto";

// request message
message Configuration
{
}

// response message
message ConfigurationStatus
{
}

