syntax = "proto3";
package stbp.v1.commands;

// request message
message Upgrade
{
}

// response message
message UpgradeStatus
{
}

